--- a/plugins/content-management-plugin/package.json
+++ b/plugins/content-management-plugin/package.json
@@ -23,22 +23,15 @@
         "react": "^18.2.0",
         "@measured/puck": "^0.16.1",
         "classnames": "^2.5.1",
-        "express": "^4.21.1"
-    },
-    "devDependencies": {
+        "express": "^4.21.1",
         "recharts": "^2.12.7",
         "graphql-tag": "^2.12.6",
-        "@types/express": "^4.17.21",
         "date-fns": "^3.6.0",
         "@deenruv/common": "workspace:*",
         "@deenruv/core": "workspace:*",
         "@deenruv/react-ui-devkit": "workspace:*",
         "react-i18next": "^14.0.5",
-        "@types/react": "^18.2.0",
-        "@types/react-dom": "^18.2.0",
         "react-router-dom": "^6.22.1",
-        "rimraf": "^5.0.10",
-        "typescript": "5.3.3",
         "graphql-zeus": "^7.0.0",
         "lucide-react": "^0.363.0",
         "sonner": "^1.4.41",
@@ -46,5 +39,12 @@
         "@nestjs/graphql": "~12.2.0",
         "typeorm": "0.3.20",
         "react-dom": "^18.2.0"
+    },
+    "devDependencies": {
+        "@types/react": "^18.2.0",
+        "@types/react-dom": "^18.2.0",
+        "@types/express": "^4.17.21",
+        "rimraf": "^5.0.10",
+        "typescript": "5.3.3"
     }
 }
