--- a/plugins/deenruv-examples-plugin/package.json
+++ b/plugins/deenruv-examples-plugin/package.json
@@ -16,29 +16,34 @@
         "build": "rimraf dist && tsc --build",
         "watch": "tsc --build --watch",
         "lint": "eslint --fix .",
-        "zeus": "zeus http://localhost:3000/admin-api ./src/plugin-server && zeus http://localhost:3000/admin-api ./src/plugin-ui"
+        "zeus": "zeus http://localhost:3000/admin-api ./src/plugin-server --td && zeus http://localhost:3000/admin-api ./src/plugin-ui --td"
     },
     "dependencies": {
-        "react": "^18.2.0"
-    },
-    "devDependencies": {
+        "@deenruv/admin-types": "workspace:*",
         "@deenruv/common": "workspace:*",
         "@deenruv/core": "workspace:*",
         "@deenruv/react-ui-devkit": "workspace:*",
-        "react-i18next": "^14.0.5",
-        "@types/react": "^18.2.0",
-        "@types/react-dom": "^18.2.0",
-        "react-router-dom": "^6.22.1",
-        "rimraf": "^5.0.10",
-        "typescript": "5.3.3",
-        "graphql-zeus": "^7.0.0",
-        "date-fns": "^3.6.0",
-        "lucide-react": "^0.363.0",
-        "sonner": "^1.4.41",
         "@nestjs/common": "~10.3.10",
         "@nestjs/graphql": "~12.2.0",
-        "typeorm": "0.3.20",
+        "date-fns": "^3.6.0",
+        "graphql-tag": "^2.12.6",
+        "graphql-zeus": "^7.0.0",
+        "i": "^0.3.7",
+        "lucide-react": "^0.363.0",
+        "npm": "^10.9.0",
+        "react": "^18.2.0",
+        "react-hook-form": "^7.51.3",
+        "react-i18next": "^14.0.5",
+        "react-router-dom": "^6.22.1",
         "recharts": "^2.12.7",
-        "graphql-tag": "^2.12.6"
+        "sonner": "^1.4.41",
+        "typeorm": "0.3.20"
+    },
+    "devDependencies": {
+        "@graphql-typed-document-node/core": "^3.2.0",
+        "@types/react": "^18.2.0",
+        "@types/react-dom": "^18.2.0",
+        "rimraf": "^5.0.10",
+        "typescript": "5.3.3"
     }
 }
