--- a/plugins/product-badges-plugin/package.json
+++ b/plugins/product-badges-plugin/package.json
@@ -16,21 +16,16 @@
         "build": "rimraf dist && tsc --build",
         "watch": "tsc --build --watch",
         "lint": "eslint --fix .",
-        "zeus": "zeus http://localhost:3000/admin-api ./src/plugin-server && zeus http://localhost:3000/admin-api ./src/plugin-ui"
+        "zeus": "zeus http://localhost:3000/admin-api ./src/plugin-server --td && zeus http://localhost:3000/admin-api ./src/plugin-ui --td"
     },
     "dependencies": {
-        "react": "^18.2.0"
-    },
-    "devDependencies": {
+        "react": "^18.2.0",
         "@deenruv/common": "workspace:*",
         "@deenruv/core": "workspace:*",
         "@deenruv/react-ui-devkit": "workspace:*",
+        "@deenruv/admin-types": "workspace:*",
         "react-i18next": "^14.0.5",
-        "@types/react": "^18.2.0",
-        "@types/react-dom": "^18.2.0",
         "react-router-dom": "^6.22.1",
-        "rimraf": "^5.0.10",
-        "typescript": "5.3.3",
         "graphql-zeus": "^7.0.0",
         "lucide-react": "^0.363.0",
         "sonner": "^1.4.41",
@@ -38,5 +33,12 @@
         "@nestjs/graphql": "~12.2.0",
         "typeorm": "0.3.20",
         "graphql-tag": "^2.12.6"
+    },
+    "devDependencies": {
+        "typescript": "5.3.3",
+        "@graphql-typed-document-node/core": "3.2.0",
+        "@types/react": "^18.2.0",
+        "@types/react-dom": "^18.2.0",
+        "rimraf": "^5.0.10"
     }
 }
