--- a/plugins/apollo-cache/package.json
+++ b/plugins/apollo-cache/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "@deenruv/deenruv-apollo-cache",
-    "version": "0.0.25",
+    "name": "@deenruv/apollo-cache",
+    "version": "0.0.26",
     "homepage": "https://www.deenruv.com/",
     "license": "MIT",
     "files": [
