--- a/plugins/apollo-cache/package.json
+++ b/plugins/apollo-cache/package.json
@@ -17,11 +17,10 @@
         "lint": "eslint --fix ."
     },
     "dependencies": {
-        "@apollo/server-plugin-response-cache": "^4.1.3",
-        "@nestjs/graphql": "~12.2.0",
         "@apollo/server": "^4.10.4",
+        "@apollo/server-plugin-response-cache": "^4.1.3",
         "@deenruv/core": "workspace:*",
-        "graphql-tag": "^2.12.6"
+        "@nestjs/graphql": "~12.2.0"
     },
     "devDependencies": {
         "rimraf": "^5.0.10"
