--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -31,6 +31,7 @@
         "@deenruv/dashboard-widgets-plugin": "workspace:*",
         "@deenruv/facet-harmonica-plugin": "workspace:*",
         "@deenruv/product-badges-plugin": "workspace:*",
+        "@deenruv/method-modal-plugin": "workspace:*",
         "@deenruv/minko-core-plugin": "workspace:*",
         "@deenruv/elasticsearch-plugin": "workspace:*",
         "@deenruv/email-plugin": "workspace:*",
