--- a/package.json
+++ b/package.json
@@ -1,79 +1,79 @@
 {
-  "name": "deenruv",
-  "version": "0.0.4",
-  "type": "module",
-  "private": true,
-  "engines": {
-    "node": ">= 18"
-  },
-  "scripts": {
-    "lint": "eslint --fix",
-    "format": "prettier --write --html-whitespace-sensitivity ignore",
-    "docs:generate-typescript-docs": "node --import @deenruv/ts-node-register scripts/docs/generate-typescript-docs.ts",
-    "docs:generate-graphql-docs": "node --import @deenruv/ts-node-register scripts/docs/generate-graphql-docs.ts --api=shop && node --import @deenruv/ts-node-register scripts/docs/generate-graphql-docs.ts --api=admin",
-    "docs:build": "pnpm docs:generate-typescript-docs && pnpm docs:generate-graphql-docs",
-    "codegen": "node --import @deenruv/ts-node-register scripts/codegen/generate-graphql-types.ts",
-    "version": "pnpm check-imports && pnpm check-angular-versions && pnpm build && pnpm check-core-type-defs && pnpm generate-changelog && git add CHANGELOG* && git add */version.ts",
-    "start:server": "pnpm -filter=@deenruv/server run start",
-    "start:admin-ui": "pnpm -filter=@deenruv/panel run dev",
-    "start": "concurrently -n server,admin-ui -c green,blue \"pnpm -filter=@deenruv/server run start\" \"pnpm -filter=@deenruv/panel run dev\"",
-    "server-docker-up": "docker compose up -d",
-    "server-docker-down": "docker compose down -v",
-    "server-populate": "pnpm -filter=@deenruv/server populate",
-    "build": "pnpm -r run build",
-    "build:dev": "pnpm -r -filter='!@deenruv/admin-ui' -filter='!@deenruv/admin-ui-plugin' -filter='!@deenruv/panel' run build",
-    "watch:plugin:deenruv-examples-plugin": "pnpm -filter=@deenruv/deenruv-examples-plugin run watch",
-    "watch:plugin:deenruv-second-plugin": "pnpm -filter=@deenruv/deenruv-second-plugin run watch",
-    "watch:package:react-ui-devkit": "pnpm -filter=@deenruv/react-ui-devkit run watch",
-    "watch": "concurrently -n package,admin-panel -c yellow,red \"pnpm -filter=@deenruv/react-ui-devkit run watch\" \"pnpm -filter=@deenruv/admin-dashboard run watch\"",
-    "check-imports": "node --import @deenruv/ts-node-register scripts/check-imports.ts",
-    "check-core-type-defs": "node --import @deenruv/ts-node-register scripts/check-core-type-defs.ts",
-    "check-angular-versions": "node --import @deenruv/ts-node-register scripts/check-angular-versions.ts",
-    "generate-changelog": "node --import @deenruv/ts-node-register scripts/changelogs/generate-changelog.ts"
-  },
-  "devDependencies": {
-    "@commitlint/cli": "^19.1.0",
-    "@commitlint/config-conventional": "^19.1.0",
-    "@deenruv/ts-node-register": "workspace:*",
-    "@graphql-codegen/add": "5.0.2",
-    "@graphql-codegen/cli": "5.0.2",
-    "@graphql-codegen/fragment-matcher": "5.0.2",
-    "@graphql-codegen/typed-document-node": "^5.0.6",
-    "@graphql-codegen/typescript": "4.0.9",
-    "@graphql-codegen/typescript-operations": "4.2.3",
-    "@graphql-codegen/visitor-plugin-common": "^5.5.0",
-    "@graphql-tools/schema": "^10.0.4",
-    "@swc/core": "^1.4.6",
-    "@types/fs-extra": "^11.0.4",
-    "@types/klaw-sync": "^6.0.5",
-    "@types/node": "^20.11.19",
-    "concurrently": "^8.2.2",
-    "conventional-changelog-core": "^7.0.0",
-    "cross-env": "^7.0.3",
-    "find": "^0.3.0",
-    "fs-extra": "^11.2.0",
-    "graphql": "~16.9.0",
-    "graphql-tag": "^2.12.6",
-    "husky": "^4.3.0",
-    "klaw-sync": "^6.0.0",
-    "lint-staged": "^10.5.4",
-    "prettier": "^3.2.5",
-    "rollup": "^4.18.0",
-    "tinybench": "^2.6.0",
-    "ts-node": "^10.9.2",
-    "typescript": "5.3.3",
-    "typescript-eslint": "^8.0.0-alpha.34",
-    "unplugin-swc": "^1.4.4",
-    "vitest": "^1.3.1"
-  },
-  "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.54.1",
-    "@typescript-eslint/parser": "^5.54.1",
-    "eslint": "^8.41.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jsdoc": "^45.0.0",
-    "eslint-plugin-prefer-arrow": "^1.2.3"
-  },
-  "packageManager": "pnpm@9.12.0+sha512.4abf725084d7bcbafbd728bfc7bee61f2f791f977fd87542b3579dcb23504d170d46337945e4c66485cd12d588a0c0e570ed9c477e7ccdd8507cf05f3f92eaca"
+    "name": "deenruv",
+    "version": "0.0.4",
+    "type": "module",
+    "private": true,
+    "engines": {
+        "node": ">= 18"
+    },
+    "scripts": {
+        "lint": "eslint --fix",
+        "format": "prettier --write --html-whitespace-sensitivity ignore",
+        "docs:generate-typescript-docs": "node --import @deenruv/ts-node-register scripts/docs/generate-typescript-docs.ts",
+        "docs:generate-graphql-docs": "node --import @deenruv/ts-node-register scripts/docs/generate-graphql-docs.ts --api=shop && node --import @deenruv/ts-node-register scripts/docs/generate-graphql-docs.ts --api=admin",
+        "docs:build": "pnpm docs:generate-typescript-docs && pnpm docs:generate-graphql-docs",
+        "codegen": "node --import @deenruv/ts-node-register scripts/codegen/generate-graphql-types.ts",
+        "version": "pnpm check-imports && pnpm check-angular-versions && pnpm build && pnpm check-core-type-defs && pnpm generate-changelog && git add CHANGELOG* && git add */version.ts",
+        "start:server": "pnpm -filter=@deenruv/server run start",
+        "start:admin-ui": "pnpm -filter=@deenruv/panel run dev",
+        "start": "concurrently -n server,admin-ui -c green,blue \"pnpm -filter=server run start\" \"pnpm -filter=panel run dev\"",
+        "server-docker-up": "docker compose up -d",
+        "server-docker-down": "docker compose down -v",
+        "server-populate": "pnpm -filter=@deenruv/server populate",
+        "build": "pnpm -r run build",
+        "build:dev": "pnpm -r -filter='!@deenruv/admin-ui' -filter='!@deenruv/admin-ui-plugin' -filter='!@deenruv/panel' run build",
+        "watch:plugin:deenruv-examples-plugin": "pnpm -filter=@deenruv/deenruv-examples-plugin run watch",
+        "watch:plugin:deenruv-second-plugin": "pnpm -filter=@deenruv/deenruv-second-plugin run watch",
+        "watch:package:react-ui-devkit": "pnpm -filter=@deenruv/react-ui-devkit run watch",
+        "watch": "concurrently -n package,admin-panel -c yellow,red \"pnpm -filter=@deenruv/react-ui-devkit run watch\" \"pnpm -filter=@deenruv/admin-dashboard run watch\"",
+        "check-imports": "node --import @deenruv/ts-node-register scripts/check-imports.ts",
+        "check-core-type-defs": "node --import @deenruv/ts-node-register scripts/check-core-type-defs.ts",
+        "check-angular-versions": "node --import @deenruv/ts-node-register scripts/check-angular-versions.ts",
+        "generate-changelog": "node --import @deenruv/ts-node-register scripts/changelogs/generate-changelog.ts"
+    },
+    "devDependencies": {
+        "@commitlint/cli": "^19.1.0",
+        "@commitlint/config-conventional": "^19.1.0",
+        "@deenruv/ts-node-register": "workspace:*",
+        "@graphql-codegen/add": "5.0.2",
+        "@graphql-codegen/cli": "5.0.2",
+        "@graphql-codegen/fragment-matcher": "5.0.2",
+        "@graphql-codegen/typed-document-node": "^5.0.6",
+        "@graphql-codegen/typescript": "4.0.9",
+        "@graphql-codegen/typescript-operations": "4.2.3",
+        "@graphql-codegen/visitor-plugin-common": "^5.5.0",
+        "@graphql-tools/schema": "^10.0.4",
+        "@swc/core": "^1.4.6",
+        "@types/fs-extra": "^11.0.4",
+        "@types/klaw-sync": "^6.0.5",
+        "@types/node": "^20.11.19",
+        "concurrently": "^8.2.2",
+        "conventional-changelog-core": "^7.0.0",
+        "cross-env": "^7.0.3",
+        "find": "^0.3.0",
+        "fs-extra": "^11.2.0",
+        "graphql": "~16.9.0",
+        "graphql-tag": "^2.12.6",
+        "husky": "^4.3.0",
+        "klaw-sync": "^6.0.0",
+        "lint-staged": "^10.5.4",
+        "prettier": "^3.2.5",
+        "rollup": "^4.18.0",
+        "tinybench": "^2.6.0",
+        "ts-node": "^10.9.2",
+        "typescript": "5.3.3",
+        "typescript-eslint": "^8.0.0-alpha.34",
+        "unplugin-swc": "^1.4.4",
+        "vitest": "^1.3.1"
+    },
+    "dependencies": {
+        "@typescript-eslint/eslint-plugin": "^5.54.1",
+        "@typescript-eslint/parser": "^5.54.1",
+        "eslint": "^8.41.0",
+        "eslint-config-prettier": "^8.8.0",
+        "eslint-plugin-import": "^2.27.5",
+        "eslint-plugin-jsdoc": "^45.0.0",
+        "eslint-plugin-prefer-arrow": "^1.2.3"
+    },
+    "packageManager": "pnpm@9.12.0+sha512.4abf725084d7bcbafbd728bfc7bee61f2f791f977fd87542b3579dcb23504d170d46337945e4c66485cd12d588a0c0e570ed9c477e7ccdd8507cf05f3f92eaca"
 }
