ft: some stuff around deenruv

--- a/apps/panel/nginx.conf
+++ b/apps/panel/nginx.conf
@@ -9,13 +9,11 @@ http {
         listen 80;
         server_name localhost;
 
-        location /admin-ui {
-            alias /usr/share/nginx/html;
+        location / {
+            autoindex off;
+            root /usr/share/nginx/html;
             try_files $uri $uri/ /admin-ui/index.html;
-        }
-
-        location /admin-ui/assets {
-            alias /usr/share/nginx/html/assets;
+            error_page 403 =200 /admin-ui/index.html;
         }
     }
 }
