--- a/packages/admin-dashboard/package.json
+++ b/packages/admin-dashboard/package.json
@@ -68,7 +68,7 @@
     "date-fns": "^3.6.0",
     "express": "^4.19.2",
     "framer-motion": "11.1.7",
-    "i18next": "23.10.0",
+    "i18next": "^23.2.3",
     "i18next-browser-languagedetector": "^7.2.0",
     "localforage": "^1.10.0",
     "lucide-react": "^0.363.0",
