--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -52,14 +52,14 @@
     "@deenruv/core": "workspace:*",
     "@graphql-tools/stitch": "^9.2.10",
     "@graphql-tools/utils": "^10.5.4",
-    "@nestjs/apollo": "~12.2.0",
-    "@nestjs/common": "~10.3.10",
-    "@nestjs/core": "~10.3.10",
-    "@nestjs/graphql": "~12.2.0",
-    "@nestjs/platform-express": "~10.3.10",
-    "@nestjs/terminus": "~10.2.3",
-    "@nestjs/testing": "~10.3.10",
-    "@nestjs/typeorm": "~10.0.2",
+    "@nestjs/apollo": "^12.2.0",
+    "@nestjs/common": "^10.3.10",
+    "@nestjs/core": "^10.3.10",
+    "@nestjs/graphql": "^12.2.0",
+    "@nestjs/platform-express": "^10.3.10",
+    "@nestjs/terminus": "^10.2.3",
+    "@nestjs/testing": "^10.3.10",
+    "@nestjs/typeorm": "^10.0.2",
     "@types/fs-extra": "^9.0.1",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
