--- a/packages/create/package.json
+++ b/packages/create/package.json
@@ -22,19 +22,19 @@
         "access": "public"
     },
     "devDependencies": {
+        "@deenruv/core": "workspace:^",
         "@types/cross-spawn": "^6.0.6",
         "@types/detect-port": "^1.3.5",
         "@types/fs-extra": "^11.0.4",
         "@types/handlebars": "^4.1.0",
         "@types/semver": "^7.5.8",
-        "@deenruv/core": "workspace:*",
         "rimraf": "^5.0.5",
         "ts-node": "^10.9.2",
         "typescript": "5.3.3"
     },
     "dependencies": {
+        "@deenruv/common": "workspace:^",
         "@clack/prompts": "^0.7.0",
-        "@deenruv/common": "workspace:*",
         "commander": "^11.0.0",
         "cross-spawn": "^7.0.3",
         "detect-port": "^1.5.1",
