--- a/packages/ui-devkit/package.json
+++ b/packages/ui-devkit/package.json
@@ -35,12 +35,12 @@
         "url": "https://github.com/deenruv-ecommerce/deenruv/issues"
     },
     "dependencies": {
+        "@deenruv/admin-ui": "workspace:^",
+        "@deenruv/common": "workspace:^",
         "@angular-devkit/build-angular": "^17.2.3",
         "@angular/cli": "^17.2.3",
         "@angular/compiler": "^17.2.4",
         "@angular/compiler-cli": "^17.2.4",
-        "@deenruv/admin-ui": "workspace:*",
-        "@deenruv/common": "workspace:*",
         "chalk": "^4.1.0",
         "chokidar": "^3.6.0",
         "fs-extra": "^11.2.0",
@@ -48,10 +48,10 @@
         "rxjs": "^7.8.1"
     },
     "devDependencies": {
+        "@deenruv/core": "workspace:^",
         "@rollup/plugin-node-resolve": "^15.2.3",
         "@rollup/plugin-terser": "^0.4.4",
         "@types/fs-extra": "^11.0.4",
-        "@deenruv/core": "workspace:*",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "rimraf": "^5.0.5",
