--- a/plugins/apollo-cache/package.json
+++ b/plugins/apollo-cache/package.json
@@ -17,10 +17,10 @@
         "lint": "eslint --fix ."
     },
     "dependencies": {
+        "@deenruv/core": "workspace:^",
         "@apollo/server": "^4.10.4",
         "@apollo/server-plugin-response-cache": "^4.1.3",
-        "@deenruv/core": "workspace:*",
-        "@nestjs/graphql": "~12.2.0"
+        "@nestjs/graphql": "^12.2.0"
     },
     "devDependencies": {
         "rimraf": "^5.0.10"
