--- a/plugins/asset-server-plugin/package.json
+++ b/plugins/asset-server-plugin/package.json
@@ -20,14 +20,14 @@
         "access": "public"
     },
     "devDependencies": {
+        "@deenruv/common": "workspace:^",
+        "@deenruv/core": "workspace:^",
         "@aws-sdk/client-s3": "^3.529.1",
         "@aws-sdk/lib-storage": "^3.529.1",
         "@aws-sdk/types": "^3.664.0",
         "@types/express": "^4.17.21",
         "@types/fs-extra": "^11.0.4",
         "@types/node-fetch": "^2.6.11",
-        "@deenruv/common": "workspace:*",
-        "@deenruv/core": "workspace:*",
         "express": "^4.18.3",
         "node-fetch": "^2.7.0",
         "rimraf": "^5.0.5",
@@ -35,7 +35,7 @@
     },
     "dependencies": {
         "@aws-sdk/credential-provider-ini": "^3.664.0",
-        "@nestjs/common": "~10.3.10",
+        "@nestjs/common": "^10.3.10",
         "file-type": "^19.0.0",
         "fs-extra": "^11.2.0",
         "sharp": "~0.33.2"
