--- a/plugins/content-management-plugin/package.json
+++ b/plugins/content-management-plugin/package.json
@@ -27,16 +27,16 @@
         "recharts": "^2.12.7",
         "graphql-tag": "^2.12.6",
         "date-fns": "^3.6.0",
-        "@deenruv/common": "workspace:*",
-        "@deenruv/core": "workspace:*",
-        "@deenruv/react-ui-devkit": "workspace:*",
+        "@deenruv/common": "workspace:^",
+        "@deenruv/core": "workspace:^",
+        "@deenruv/react-ui-devkit": "workspace:^",
         "react-i18next": "^14.0.5",
         "react-router-dom": "^6.22.1",
         "graphql-zeus": "^7.0.0",
         "lucide-react": "^0.363.0",
         "sonner": "^1.4.41",
-        "@nestjs/common": "~10.3.10",
-        "@nestjs/graphql": "~12.2.0",
+        "@nestjs/common": "^10.3.10",
+        "@nestjs/graphql": "^12.2.0",
         "typeorm": "0.3.20",
         "react-dom": "^18.2.0"
     },
