--- a/plugins/dashboard-widgets-plugin/package.json
+++ b/plugins/dashboard-widgets-plugin/package.json
@@ -21,12 +21,12 @@
     "dependencies": {
         "react": "^18.2.0",
         "lucide-react": "^0.363.0",
-        "@deenruv/react-ui-devkit": "workspace:*",
-        "@deenruv/common": "workspace:*",
-        "@deenruv/core": "workspace:*",
-        "@deenruv/admin-types": "workspace:*",
-        "@nestjs/common": "~10.3.10",
-        "@nestjs/graphql": "~12.2.0",
+        "@deenruv/react-ui-devkit": "workspace:^",
+        "@deenruv/common": "workspace:^",
+        "@deenruv/core": "workspace:^",
+        "@deenruv/admin-types": "workspace:^",
+        "@nestjs/common": "^10.3.10",
+        "@nestjs/graphql": "^12.2.0",
         "@tanstack/react-table": "^8.15.3",
         "date-fns": "^4.1.0",
         "graphql-tag": "^2.12.6",
