--- a/plugins/deenruv-examples-plugin/package.json
+++ b/plugins/deenruv-examples-plugin/package.json
@@ -19,12 +19,12 @@
         "zeus": "zeus http://localhost:3000/admin-api ./src/plugin-server --td && zeus http://localhost:3000/admin-api ./src/plugin-ui --td"
     },
     "dependencies": {
-        "@deenruv/admin-types": "workspace:*",
-        "@deenruv/common": "workspace:*",
-        "@deenruv/core": "workspace:*",
-        "@deenruv/react-ui-devkit": "workspace:*",
-        "@nestjs/common": "~10.3.10",
-        "@nestjs/graphql": "~12.2.0",
+        "@deenruv/admin-types": "workspace:^",
+        "@deenruv/common": "workspace:^",
+        "@deenruv/core": "workspace:^",
+        "@deenruv/react-ui-devkit": "workspace:^",
+        "@nestjs/common": "^10.3.10",
+        "@nestjs/graphql": "^12.2.0",
         "date-fns": "^3.6.0",
         "graphql-tag": "^2.12.6",
         "graphql-zeus": "^7.0.0",
