--- a/plugins/elasticsearch-plugin/package.json
+++ b/plugins/elasticsearch-plugin/package.json
@@ -21,10 +21,10 @@
     },
     "dependencies": {
         "@elastic/elasticsearch": "~7.9.1",
-        "@nestjs/common": "~10.3.10",
-        "@nestjs/core": "~10.3.10",
-        "@nestjs/graphql": "~12.2.0",
-        "@nestjs/terminus": "~10.2.3",
+        "@nestjs/common": "^10.3.10",
+        "@nestjs/core": "^10.3.10",
+        "@nestjs/graphql": "^12.2.0",
+        "@nestjs/terminus": "^10.2.3",
         "deepmerge": "^4.2.2",
         "fast-deep-equal": "^3.1.3",
         "graphql-tag": "^2.12.6",
@@ -32,8 +32,8 @@
         "typeorm": "0.3.20"
     },
     "devDependencies": {
-        "@deenruv/common": "workspace:*",
-        "@deenruv/core": "workspace:*",
+        "@deenruv/common": "workspace:^",
+        "@deenruv/core": "workspace:^",
         "rimraf": "^5.0.5",
         "typescript": "5.3.3"
     }
