--- a/plugins/email-plugin/package.json
+++ b/plugins/email-plugin/package.json
@@ -20,8 +20,8 @@
         "access": "public"
     },
     "dependencies": {
-        "@nestjs/common": "~10.3.10",
-        "@nestjs/core": "~10.3.10",
+        "@nestjs/common": "^10.3.10",
+        "@nestjs/core": "^10.3.10",
         "@types/nodemailer": "^6.4.9",
         "dateformat": "^3.0.3",
         "express": "^4.18.2",
@@ -35,8 +35,8 @@
         "@types/express": "^4.17.21",
         "@types/fs-extra": "^11.0.4",
         "@types/mjml": "^4.7.4",
-        "@deenruv/common": "workspace:*",
-        "@deenruv/core": "workspace:*",
+        "@deenruv/common": "workspace:^",
+        "@deenruv/core": "workspace:^",
         "rimraf": "^5.0.5",
         "typescript": "5.3.3"
     }
