--- a/plugins/facet-harmonica-plugin/package.json
+++ b/plugins/facet-harmonica-plugin/package.json
@@ -21,16 +21,16 @@
     "dependencies": {
         "graphql-tag": "^2.12.6",
         "react": "^18.2.0",
-        "@deenruv/common": "workspace:*",
-        "@deenruv/core": "workspace:*",
-        "@deenruv/react-ui-devkit": "workspace:*",
+        "@deenruv/common": "workspace:^",
+        "@deenruv/core": "workspace:^",
+        "@deenruv/react-ui-devkit": "workspace:^",
         "react-i18next": "^14.0.5",
         "react-router-dom": "^6.22.1",
         "graphql-zeus": "^7.0.0",
         "lucide-react": "^0.363.0",
         "sonner": "^1.4.41",
-        "@nestjs/common": "~10.3.10",
-        "@nestjs/graphql": "~12.2.0",
+        "@nestjs/common": "^10.3.10",
+        "@nestjs/graphql": "^12.2.0",
         "typeorm": "0.3.20"
     },
     "devDependencies": {
