--- a/plugins/minko-core-plugin/package.json
+++ b/plugins/minko-core-plugin/package.json
@@ -18,19 +18,22 @@
         "lint": "eslint --fix .",
         "zeus": "zeus http://localhost:3000/admin-api ./src/plugin-server && zeus http://localhost:3000/admin-api ./src/plugin-ui"
     },
+    "peerDependencies": {
+        "graphql": "~16.9.0",
+        "graphql-tag": "^2.12.6"
+    },
     "dependencies": {
         "@aws-sdk/client-s3": "^3.583.0",
         "@aws-sdk/s3-request-presigner": "^3.583.0",
         "react": "^18.2.0",
         "@react-pdf/renderer": "^3.3.8",
-        "graphql": "~16.9.0",
         "mime": "^3.0.0",
         "mime-types": "^2.1.35"
     },
     "devDependencies": {
-        "@deenruv/common": "workspace:*",
-        "@deenruv/core": "workspace:*",
-        "@deenruv/react-ui-devkit": "workspace:*",
+        "@deenruv/common": "workspace:^",
+        "@deenruv/core": "workspace:^",
+        "@deenruv/react-ui-devkit": "workspace:^",
         "react-i18next": "^14.0.5",
         "@types/react": "^18.2.0",
         "@types/react-dom": "^18.2.0",
@@ -41,11 +44,10 @@
         "date-fns": "^3.6.0",
         "lucide-react": "^0.363.0",
         "sonner": "^1.4.41",
-        "@nestjs/common": "~10.3.10",
-        "@nestjs/graphql": "~12.2.0",
+        "@nestjs/common": "^10.3.10",
+        "@nestjs/graphql": "^12.2.0",
         "typeorm": "0.3.20",
         "recharts": "^2.12.7",
-        "graphql-tag": "^2.12.6",
         "@types/mime-types": "^2.1.3"
     }
 }
