--- a/plugins/sentry-plugin/package.json
+++ b/plugins/sentry-plugin/package.json
@@ -17,11 +17,13 @@
         "access": "public"
     },
     "peerDependencies": {
-        "@sentry/node": "7.106.1"
+        "@sentry/node": "7.106.1",
+        "graphql": "~16.9.0",
+        "graphql-tag": "^2.12.6"
     },
     "devDependencies": {
-        "@deenruv/common": "workspace:*",
-        "@deenruv/core": "workspace:*",
+        "@deenruv/common": "workspace:^",
+        "@deenruv/core": "workspace:^",
         "@sentry/node": "7.106.1",
         "@sentry/types": "7.106.1",
         "@types/express": "^4.17.21",
@@ -29,11 +31,9 @@
     },
     "dependencies": {
         "@apollo/server": "^4.10.4",
-        "@nestjs/common": "~10.3.10",
-        "@nestjs/core": "~10.3.10",
-        "@nestjs/graphql": "~12.2.0",
-        "express": "^4.21.0",
-        "graphql": "~16.9.0",
-        "graphql-tag": "^2.12.6"
+        "@nestjs/common": "^10.3.10",
+        "@nestjs/core": "^10.3.10",
+        "@nestjs/graphql": "^12.2.0",
+        "express": "^4.21.0"
     }
 }
