--- a/plugins/stellate-plugin/package.json
+++ b/plugins/stellate-plugin/package.json
@@ -17,16 +17,16 @@
         "access": "public"
     },
     "dependencies": {
-        "@nestjs/common": "~10.3.10",
-        "@nestjs/core": "~10.3.10",
-        "@nestjs/graphql": "~12.2.0",
+        "@nestjs/common": "^10.3.10",
+        "@nestjs/core": "^10.3.10",
+        "@nestjs/graphql": "^12.2.0",
         "graphql-tag": "^2.12.6",
         "node-fetch": "^2.7.0",
         "rxjs": "^7.8.1"
     },
     "devDependencies": {
-        "@deenruv/common": "workspace:*",
-        "@deenruv/core": "workspace:*",
+        "@deenruv/common": "workspace:^",
+        "@deenruv/core": "workspace:^",
         "@types/node-fetch": "^2.6.11",
         "rimraf": "^5.0.5"
     }
