--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
         "klaw-sync": "^6.0.0",
         "lint-staged": "^10.5.4",
         "prettier": "^3.2.5",
+        "prettier-eslint": "^16.3.0",
         "rollup": "^4.18.0",
         "tinybench": "^2.6.0",
         "ts-node": "^10.9.2",
