--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -28,6 +28,7 @@
         "@deenruv/content-management-plugin": "workspace:*",
         "@deenruv/deenruv-examples-plugin": "workspace:*",
         "@deenruv/seo-plugin": "workspace:*",
+        "@deenruv/facet-color-fields-plugin": "workspace:*",
         "@deenruv/dashboard-widgets-plugin": "workspace:*",
         "@deenruv/facet-harmonica-plugin": "workspace:*",
         "@deenruv/product-badges-plugin": "workspace:*",
