--- a/apps/panel/package.json
+++ b/apps/panel/package.json
@@ -23,6 +23,7 @@
     "@deenruv/dashboard-widgets-plugin": "workspace:*",
     "@deenruv/react-ui-devkit": "workspace:*",
     "@deenruv/facet-color-fields-plugin": "workspace:*",
+    "@deenruv/order-line-attributes-plugin": "workspace:*",
     "@deenruv/admin-types": "workspace:*",
     "@aexol-studio/hooks": "^0.2.16",
     "class-variance-authority": "^0.7.0",
