--- a/plugins/dashboard-widgets-plugin/package.json
+++ b/plugins/dashboard-widgets-plugin/package.json
@@ -29,6 +29,7 @@
         "@nestjs/graphql": "^12.2.0",
         "@tanstack/react-table": "^8.15.3",
         "date-fns": "^4.1.0",
+        "date-fns-tz": "^3.2.0",
         "graphql-tag": "^2.12.6",
         "graphql-zeus": "^7.0.0",
         "react-i18next": "^14.0.5",
