--- a/packages/admin-types/package.json
+++ b/packages/admin-types/package.json
@@ -9,7 +9,7 @@
         "dist/**/*"
     ],
     "scripts": {
-        "zeus": "zeus http://localhost:3000/admin-api ./src --n --ts --typedDocumentNode",
+        "zeus": "zeus http://localhost:3000/admin-api ./src --n --ts --es --typedDocumentNode",
         "build": "tsc --build",
         "watch": "tsc --watch"
     },
@@ -18,6 +18,7 @@
     },
     "dependencies": {
         "@graphql-typed-document-node/core": "^3.2.0",
-        "graphql-tag": "^2.12.6"
+        "graphql-tag": "^2.12.6",
+        "node-fetch": "2"
     }
 }
