--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,5 +20,6 @@
     ],
     "conventionalCommits.gitmoji": false,
     "cSpell.words": ["Deenruv"],
-    "angular.enable-strict-mode-prompt": false
+    "angular.enable-strict-mode-prompt": false,
+    "typescript.preferences.importModuleSpecifierEnding": "js"
 }
