--- a/packages/admin-types/package.json
+++ b/packages/admin-types/package.json
@@ -9,16 +9,16 @@
         "dist/**/*"
     ],
     "scripts": {
-        "zeus": "zeus http://localhost:3000/admin-api ./src --n --ts --es --typedDocumentNode",
+        "zeus": "zeus http://localhost:3000/admin-api ./src --ts --es --typedDocumentNode",
         "build": "tsc --build",
         "watch": "tsc --watch"
     },
     "devDependencies": {
+        "graphql-zeus": "^7.0.0",
         "rimraf": "^6.0.1"
     },
     "dependencies": {
         "@graphql-typed-document-node/core": "^3.2.0",
-        "graphql-tag": "^2.12.6",
-        "node-fetch": "2"
+        "graphql-tag": "^2.12.6"
     }
 }
