--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "clean": "rm -rf node_modules && pnpm -r exec rm -rf node_modules && pnpm -r exec rm -rf dist"
     },
     "devDependencies": {
+        "@aexol/dev-translate": "^0.0.3",
         "@commitlint/cli": "^19.1.0",
         "@commitlint/config-conventional": "^19.1.0",
         "@deenruv/ts-node-register": "workspace:*",
