--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,10 +16,11 @@
         "stellate-plugin",
         "testing",
         "ui-devkit",
-        "repo"
+        "repo",
     ],
     "conventionalCommits.gitmoji": false,
     "cSpell.words": ["Deenruv"],
     "angular.enable-strict-mode-prompt": false,
+    "typescript.tsdk": "node_modules/typescript/lib",
     "typescript.preferences.importModuleSpecifierEnding": "js"
 }
