ft: more integration

--- a/apps/panel/package.json
+++ b/apps/panel/package.json
@@ -26,6 +26,7 @@
     "@deenruv/in-realization-plugin": "workspace:*",
     "@deenruv/order-line-attributes-plugin": "workspace:*",
     "@deenruv/replicate-plugin": "workspace:*",
+    "@deenruv/przelewy24-plugin": "workspace:*",
     "@deenruv/wfirma-plugin": "workspace:*",
     "@deenruv/admin-types": "workspace:*",
     "@aexol-studio/hooks": "^0.2.16",
