--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -45,7 +45,7 @@
         "@nestjs/axios": "^3.0.2",
         "@nestjs/common": "~10.3.10",
         "@nestjs/serve-static": "^4.0.2",
-        "typeorm": "0.3.20",
+        "typeorm": "^0.3.20",
         "typescript": "5.3.3"
     },
     "devDependencies": {
