--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -84,7 +84,7 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "semver": "^7.6.0",
-    "typeorm": "0.3.20"
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
