--- a/plugins/content-management-plugin/package.json
+++ b/plugins/content-management-plugin/package.json
@@ -37,7 +37,7 @@
         "sonner": "^1.4.41",
         "@nestjs/common": "^10.3.10",
         "@nestjs/graphql": "^12.2.0",
-        "typeorm": "0.3.20",
+        "typeorm": "^0.3.20",
         "react-dom": "^18.2.0"
     },
     "devDependencies": {
