--- a/plugins/dashboard-widgets-plugin/package.json
+++ b/plugins/dashboard-widgets-plugin/package.json
@@ -36,7 +36,7 @@
         "react-router-dom": "^6.22.1",
         "recharts": "^2.12.7",
         "sonner": "^1.4.41",
-        "typeorm": "0.3.20"
+        "typeorm": "^0.3.20"
     },
     "devDependencies": {
         "rimraf": "^5.0.10",
