--- a/plugins/deenruv-examples-plugin/package.json
+++ b/plugins/deenruv-examples-plugin/package.json
@@ -37,7 +37,7 @@
         "react-router-dom": "^6.22.1",
         "recharts": "^2.12.7",
         "sonner": "^1.4.41",
-        "typeorm": "0.3.20"
+        "typeorm": "^0.3.20"
     },
     "devDependencies": {
         "@graphql-typed-document-node/core": "^3.2.0",
