--- a/plugins/elasticsearch-plugin/package.json
+++ b/plugins/elasticsearch-plugin/package.json
@@ -29,7 +29,7 @@
         "fast-deep-equal": "^3.1.3",
         "graphql-tag": "^2.12.6",
         "rxjs": "^7.8.1",
-        "typeorm": "0.3.20"
+        "typeorm": "^0.3.20"
     },
     "devDependencies": {
         "@deenruv/common": "workspace:^",
