--- a/plugins/minko-core-plugin/package.json
+++ b/plugins/minko-core-plugin/package.json
@@ -46,7 +46,7 @@
         "sonner": "^1.4.41",
         "@nestjs/common": "^10.3.10",
         "@nestjs/graphql": "^12.2.0",
-        "typeorm": "0.3.20",
+        "typeorm": "^0.3.20",
         "recharts": "^2.12.7",
         "@types/mime-types": "^2.1.3"
     }
