--- a/plugins/order-attributes-plugin/package.json
+++ b/plugins/order-attributes-plugin/package.json
@@ -32,7 +32,7 @@
         "sonner": "^1.4.41",
         "@nestjs/common": "^10.3.10",
         "@nestjs/graphql": "^12.2.0",
-        "typeorm": "0.3.20"
+        "typeorm": "^0.3.20"
     },
     "devDependencies": {
         "rimraf": "^5.0.10",
