--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -39,6 +39,7 @@
     "cli/**/*"
   ],
   "peerDependencies": {
+    "typeorm": "^0.3.20",
     "graphql": "~16.9.0",
     "graphql-fields": "^2.0.3",
     "graphql-scalars": "^1.22.5",
@@ -83,8 +84,7 @@
     "progress": "^2.0.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "semver": "^7.6.0",
-    "typeorm": "^0.3.20"
+    "semver": "^7.6.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -104,12 +104,18 @@
     "chokidar": "^3.6.0",
     "fs-extra": "^11.2.0",
     "glob": "^10.4.5",
+    "graphql": "~16.9.0",
+    "graphql-fields": "^2.0.3",
+    "graphql-scalars": "^1.22.5",
+    "graphql-tag": "^2.12.6",
+    "graphql-upload": "^16.0.2",
     "mysql": "^2.18.1",
     "pg": "^8.11.3",
     "rimraf": "^5.0.5",
     "sql.js": "1.10.2",
     "sqlite3": "^5.1.7",
     "ts-node": "^10.9.2",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "typeorm": "^0.3.20"
   }
 }
