--- a/plugins/content-management-plugin/package.json
+++ b/plugins/content-management-plugin/package.json
@@ -37,7 +37,6 @@
         "sonner": "^1.4.41",
         "@nestjs/common": "^10.3.10",
         "@nestjs/graphql": "^12.2.0",
-        "typeorm": "^0.3.20",
         "react-dom": "^18.2.0"
     },
     "devDependencies": {
@@ -45,6 +44,10 @@
         "@types/react-dom": "^18.2.0",
         "@types/express": "^4.17.21",
         "rimraf": "^5.0.10",
-        "typescript": "5.3.3"
+        "typescript": "5.3.3",
+        "typeorm": "^0.3.20"
+    },
+    "peerDependencies": {
+        "typeorm": "^0.3.20"
     }
 }
