--- a/plugins/elasticsearch-plugin/package.json
+++ b/plugins/elasticsearch-plugin/package.json
@@ -28,13 +28,16 @@
         "deepmerge": "^4.2.2",
         "fast-deep-equal": "^3.1.3",
         "graphql-tag": "^2.12.6",
-        "rxjs": "^7.8.1",
-        "typeorm": "^0.3.20"
+        "rxjs": "^7.8.1"
     },
     "devDependencies": {
         "@deenruv/common": "workspace:^",
         "@deenruv/core": "workspace:^",
         "rimraf": "^5.0.5",
-        "typescript": "5.3.3"
+        "typescript": "5.3.3",
+        "typeorm": "^0.3.20"
+    },
+    "peerDependencies": {
+        "typeorm": "^0.3.20"
     }
 }
