--- a/plugins/facet-harmonica-plugin/package.json
+++ b/plugins/facet-harmonica-plugin/package.json
@@ -24,6 +24,7 @@
         "@deenruv/common": "workspace:^",
         "@deenruv/core": "workspace:^",
         "@deenruv/react-ui-devkit": "workspace:^",
+        "@deenruv/admin-types": "workspace:^",
         "react-i18next": "^14.0.5",
         "react-router-dom": "^6.22.1",
         "graphql-zeus": "^7.0.0",
