--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -21,8 +21,7 @@
     "build": "rimraf dist && tsc -p ./tsconfig.cli.json && ts-node ./build.ts",
     "watch": "tsc -p ./tsconfig.cli.json --watch",
     "ci": "npm run build",
-    "test": "vitest --config vitest.config.mts --run",
-    "lint:fix": "eslint --fix ."
+    "test": "vitest --config vitest.config.mts --run"
   },
   "publishConfig": {
     "access": "public"
