--- a/packages/ui-devkit/package.json
+++ b/packages/ui-devkit/package.json
@@ -29,6 +29,7 @@
     "build:compiler": "rimraf ./compiler && tsc -p tsconfig.compiler.json",
     "build": "npm run build:client && npm run build:compiler",
     "watch": "rimraf ./lib && rollup -c rollup.config.mjs -w",
+    "lint": "eslint .",
     "lint:fix": "eslint --fix ."
   },
   "bugs": {
