--- a/plugins/email-plugin/tsconfig.json
+++ b/plugins/email-plugin/tsconfig.json
@@ -5,6 +5,7 @@
     "removeComments": false,
     "noLib": false,
     "skipLibCheck": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "jsx": "react-jsx"
   }
 }
