feat: cleanup dependencies and extract peer dependencies to peerDependencies

--- a/plugins/copy-order-plugin/package.json
+++ b/plugins/copy-order-plugin/package.json
@@ -19,19 +19,20 @@
     "lint:fix": "eslint --fix .",
     "zeus": "zeus http://localhost:3000/admin-api ./src/plugin-server --td && zeus http://localhost:3000/admin-api ./src/plugin-ui --td"
   },
+  "peerDependencies": {
+    "@deenruv/core": "^0.0.148"
+  },
   "dependencies": {
     "react": "^18.2.0",
     "lucide-react": "^0.363.0",
     "@deenruv/react-ui-devkit": "workspace:^",
     "@deenruv/common": "workspace:^",
-    "@deenruv/core": "workspace:^",
     "@deenruv/admin-types": "workspace:^",
     "@nestjs/common": "^10.3.10",
     "@nestjs/graphql": "^12.2.0",
     "@tanstack/react-table": "^8.15.3",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
-    "graphql-tag": "^2.12.6",
     "graphql-zeus": "^7.0.0",
     "react-i18next": "^14.0.5",
     "react-router-dom": "^6.22.1",
@@ -39,14 +40,11 @@
     "sonner": "^1.4.41"
   },
   "devDependencies": {
+    "@deenruv/core": "workspace:^",
     "rimraf": "^5.0.10",
     "typescript": "5.3.3",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "@graphql-typed-document-node/core": "^3.2.0",
-    "typeorm": "^0.3.20"
-  },
-  "peerDependencies": {
-    "typeorm": "^0.3.20"
+    "@graphql-typed-document-node/core": "^3.2.0"
   }
 }
