--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "@aexol/vite-plugin-dev-translate": "^0.1.0",
     "@commitlint/cli": "^19.1.0",
     "@commitlint/config-conventional": "^19.1.0",
+    "@deenruv/common": "workspace:^",
+    "@deenruv/core": "workspace:^",
     "@deenruv/ts-node-register": "workspace:*",
     "@graphql-codegen/add": "5.0.2",
     "@graphql-codegen/cli": "5.0.2",
@@ -48,8 +50,13 @@
     "@graphql-codegen/typescript-operations": "4.2.3",
     "@graphql-codegen/visitor-plugin-common": "^5.5.0",
     "@graphql-tools/schema": "^10.0.4",
+    "@nestjs/common": "^10.3.10",
+    "@nestjs/core": "^10.3.10",
+    "@nestjs/testing": "^10.3.10",
+    "@nestjs/typeorm": "^10.0.2",
     "@swc/core": "^1.4.6",
     "@types/fs-extra": "^11.0.4",
+    "@types/graphql-upload": "^16.0.7",
     "@types/klaw-sync": "^6.0.5",
     "@types/node": "^20.11.19",
     "concurrently": "^8.2.2",
@@ -73,6 +80,14 @@
     "vitest": "^3.0.9"
   },
   "dependencies": {
+    "@apollo/server": "^4.10.4",
+    "@deenruv/core": "workspace:^",
+    "@deenruv/testing": "workspace:^",
+    "@eslint/js": "^9.26.0",
+    "@nestjs/core": "^10.3.10",
+    "@nestjs/testing": "^10.3.10",
+    "@nestjs/typeorm": "^10.0.2",
+    "@types/express": "^4.17.21",
     "@typescript-eslint/eslint-plugin": "^8.29.0",
     "@typescript-eslint/parser": "^8.29.0",
     "eslint": "^9.24.0",
@@ -81,7 +96,14 @@
     "eslint-plugin-jsdoc": "^50.6.9",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-prettier": "^5.2.6",
-    "eslint-plugin-tailwindcss": "^3.18.0"
+    "eslint-plugin-tailwindcss": "^3.18.0",
+    "graphql": "~16.9.0",
+    "graphql-fields": "^2.0.3",
+    "graphql-scalars": "^1.22.5",
+    "graphql-tag": "^2.12.6",
+    "graphql-upload": "^16.0.2",
+    "react": "^18.2.0",
+    "typeorm": "^0.3.20"
   },
   "packageManager": "pnpm@10.7.0+sha512.6b865ad4b62a1d9842b61d674a393903b871d9244954f652b8842c2b553c72176b278f64c463e52d40fff8aba385c235c8c9ecf5cc7de4fd78b8bb6d49633ab6"
 }
