--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -40,6 +40,9 @@
     "cli/**/*"
   ],
   "peerDependencies": {
+    "@nestjs/core": "^10.3.10",
+    "@nestjs/testing": "^10.3.10",
+    "@nestjs/typeorm": "^10.0.2",
     "typeorm": "^0.3.20",
     "graphql": "~16.9.0",
     "graphql-fields": "^2.0.3",
@@ -51,17 +54,13 @@
     "@apollo/server": "^4.10.4",
     "@apollographql/graphql-playground-html": "^1.6.29",
     "@deenruv/common": "workspace:*",
-    "@deenruv/core": "workspace:*",
     "@graphql-tools/stitch": "^9.2.10",
     "@graphql-tools/utils": "^10.5.4",
     "@nestjs/apollo": "^12.2.0",
     "@nestjs/common": "^10.3.10",
-    "@nestjs/core": "^10.3.10",
     "@nestjs/graphql": "^12.2.0",
     "@nestjs/platform-express": "^10.3.10",
     "@nestjs/terminus": "^10.2.3",
-    "@nestjs/testing": "^10.3.10",
-    "@nestjs/typeorm": "^10.0.2",
     "@types/fs-extra": "^9.0.1",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
@@ -91,7 +90,6 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-session": "^2.0.48",
     "@types/express": "^4.17.21",
-    "@types/graphql-upload": "^16.0.7",
     "@types/gulp": "^4.0.17",
     "@types/mime-types": "^2.1.4",
     "@types/ms": "^0.7.34",
@@ -104,18 +102,12 @@
     "chokidar": "^3.6.0",
     "fs-extra": "^11.2.0",
     "glob": "^10.4.5",
-    "graphql": "~16.9.0",
-    "graphql-fields": "^2.0.3",
-    "graphql-scalars": "^1.22.5",
-    "graphql-tag": "^2.12.6",
-    "graphql-upload": "^16.0.2",
     "mysql": "^2.18.1",
     "pg": "^8.11.3",
     "rimraf": "^5.0.5",
     "sql.js": "1.10.2",
     "sqlite3": "^5.1.7",
     "ts-node": "^10.9.2",
-    "typescript": "5.3.3",
-    "typeorm": "^0.3.20"
+    "typescript": "5.3.3"
   }
 }
