--- a/packages/react-ui-devkit/package.json
+++ b/packages/react-ui-devkit/package.json
@@ -45,6 +45,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-portal": "^1.1.0",
     "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-radio-group": "^1.2.0",
     "@radix-ui/react-scroll-area": "^1.0.5",
@@ -89,6 +90,7 @@
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "typescript-transform-paths": "^3.5.1",
+    "use-debounce": "^10.0.0",
     "vaul": "^0.9.1",
     "zustand": "^4.5.2"
   },
@@ -101,6 +103,7 @@
     "rollup-plugin-typescript2": "^0.36.0",
     "ts-patch": "^3.2.1",
     "tslib": "^2.6.2",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "vite": "^5.1.0"
   }
 }
