--- a/plugins/apollo-cache/package.json
+++ b/plugins/apollo-cache/package.json
@@ -17,13 +17,16 @@
     "lint": "eslint .",
     "lint:fix": "eslint --fix ."
   },
+  "peerDependencies": {
+    "@deenruv/core": "^0.0.148",
+    "@apollo/server": "^4.10.4"
+  },
   "dependencies": {
-    "@deenruv/core": "workspace:^",
-    "@apollo/server": "^4.10.4",
     "@apollo/server-plugin-response-cache": "^4.1.3",
     "@nestjs/graphql": "^12.2.0"
   },
   "devDependencies": {
+    "@deenruv/core": "workspace:^",
     "rimraf": "^5.0.10"
   }
 }
