--- a/plugins/asset-server-plugin/package.json
+++ b/plugins/asset-server-plugin/package.json
@@ -20,9 +20,12 @@
   "publishConfig": {
     "access": "public"
   },
+  "peerDependencies": {
+    "@deenruv/core": "^0.0.148"
+  },
   "devDependencies": {
-    "@deenruv/common": "workspace:^",
     "@deenruv/core": "workspace:^",
+    "@deenruv/common": "workspace:^",
     "@aws-sdk/client-s3": "^3.529.1",
     "@aws-sdk/lib-storage": "^3.529.1",
     "@aws-sdk/types": "^3.664.0",
