--- a/plugins/dashboard-widgets-plugin/package.json
+++ b/plugins/dashboard-widgets-plugin/package.json
@@ -24,7 +24,6 @@
     "lucide-react": "^0.363.0",
     "@deenruv/react-ui-devkit": "workspace:^",
     "@deenruv/common": "workspace:^",
-    "@deenruv/core": "workspace:^",
     "@deenruv/admin-types": "workspace:^",
     "@nestjs/common": "^10.3.10",
     "@nestjs/graphql": "^12.2.0",
@@ -39,14 +38,15 @@
     "sonner": "^1.4.41"
   },
   "devDependencies": {
+    "@deenruv/core": "workspace:^",
     "rimraf": "^5.0.10",
     "typescript": "5.3.3",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "@graphql-typed-document-node/core": "^3.2.0",
-    "typeorm": "^0.3.20"
+    "@graphql-typed-document-node/core": "^3.2.0"
   },
   "peerDependencies": {
+    "@deenruv/core": "^0.0.148",
     "typeorm": "^0.3.20"
   }
 }
