--- a/plugins/deenruv-examples-plugin/package.json
+++ b/plugins/deenruv-examples-plugin/package.json
@@ -22,7 +22,6 @@
   "dependencies": {
     "@deenruv/admin-types": "workspace:^",
     "@deenruv/common": "workspace:^",
-    "@deenruv/core": "workspace:^",
     "@deenruv/react-ui-devkit": "workspace:^",
     "@nestjs/common": "^10.3.10",
     "@nestjs/graphql": "^12.2.0",
@@ -40,14 +39,15 @@
     "sonner": "^1.4.41"
   },
   "devDependencies": {
+    "@deenruv/core": "workspace:^",
     "@graphql-typed-document-node/core": "^3.2.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "rimraf": "^5.0.10",
-    "typescript": "5.3.3",
-    "typeorm": "^0.3.20"
+    "typescript": "5.3.3"
   },
   "peerDependencies": {
+    "@deenruv/core": "^0.0.148",
     "typeorm": "^0.3.20"
   }
 }
