--- a/plugins/email-plugin/package.json
+++ b/plugins/email-plugin/package.json
@@ -21,8 +21,8 @@
     "access": "public"
   },
   "dependencies": {
+    "@deenruv/common": "workspace:^",
     "@nestjs/common": "^10.3.10",
-    "@nestjs/core": "^10.3.10",
     "@types/nodemailer": "^6.4.9",
     "dateformat": "^3.0.3",
     "express": "^4.18.2",
@@ -34,13 +34,16 @@
     "@react-email/components": "^0.0.35",
     "@react-email/render": "1.0.5"
   },
+  "peerDependencies": {
+    "@deenruv/core": "^0.0.148",
+    "@nestjs/core": "^10.3.10"
+  },
   "devDependencies": {
+    "@deenruv/core": "workspace:^",
     "@types/dateformat": "^3.0.1",
     "@types/express": "^4.17.21",
     "@types/fs-extra": "^11.0.4",
     "@types/mjml": "^4.7.4",
-    "@deenruv/common": "workspace:^",
-    "@deenruv/core": "workspace:^",
     "rimraf": "^5.0.5",
     "typescript": "5.3.3",
     "@types/react": "^18.2.0"
