--- a/plugins/facet-harmonica-plugin/package.json
+++ b/plugins/facet-harmonica-plugin/package.json
@@ -23,7 +23,6 @@
     "graphql-tag": "^2.12.6",
     "react": "^18.2.0",
     "@deenruv/common": "workspace:^",
-    "@deenruv/core": "workspace:^",
     "@deenruv/react-ui-devkit": "workspace:^",
     "@deenruv/admin-types": "workspace:^",
     "react-i18next": "^14.0.5",
@@ -35,13 +34,15 @@
     "@nestjs/graphql": "^12.2.0"
   },
   "devDependencies": {
+    "@deenruv/core": "workspace:^",
     "rimraf": "^5.0.10",
+    "@graphql-typed-document-node/core": "3.2.0",
     "typescript": "5.3.3",
     "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "typeorm": "^0.3.20"
+    "@types/react-dom": "^18.2.0"
   },
   "peerDependencies": {
+    "@deenruv/core": "^0.0.148",
     "typeorm": "^0.3.20"
   }
 }
