--- a/plugins/product-badges-plugin/package.json
+++ b/plugins/product-badges-plugin/package.json
@@ -22,7 +22,6 @@
   "dependencies": {
     "react": "^18.2.0",
     "@deenruv/common": "workspace:^",
-    "@deenruv/core": "workspace:^",
     "@deenruv/react-ui-devkit": "workspace:^",
     "@deenruv/admin-types": "workspace:^",
     "react-i18next": "^14.0.5",
@@ -35,14 +34,15 @@
     "graphql-tag": "^2.12.6"
   },
   "devDependencies": {
+    "@deenruv/core": "workspace:^",
     "typescript": "5.3.3",
     "@graphql-typed-document-node/core": "3.2.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "rimraf": "^5.0.10",
-    "typeorm": "^0.3.20"
+    "rimraf": "^5.0.10"
   },
   "peerDependencies": {
+    "@deenruv/core": "^0.0.148",
     "typeorm": "^0.3.20"
   }
 }
