--- a/plugins/przelewy24-plugin/package.json
+++ b/plugins/przelewy24-plugin/package.json
@@ -19,13 +19,23 @@
     "lint:fix": "eslint --fix .",
     "zeus": "zeus http://localhost:3000/admin-api ./src/plugin-server && zeus http://localhost:3000/admin-api ./src/plugin-ui"
   },
+  "peerDependencies": {
+    "@deenruv/core": "^0.0.148",
+    "react": "^18.2.0"
+  },
   "dependencies": {
     "@deenruv/common": "workspace:^",
-    "@deenruv/core": "workspace:^",
     "@deenruv/react-ui-devkit": "workspace:^",
-    "@deenruv/admin-types": "workspace:^"
+    "@deenruv/admin-types": "workspace:^",
+    "@nestjs/graphql": "^12.2.0",
+    "axios": "^1.7.7",
+    "sonner": "^1.4.41"
   },
   "devDependencies": {
+    "@deenruv/core": "workspace:^",
+    "@graphql-typed-document-node/core": "3.2.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "rimraf": "^5.0.10",
     "typescript": "5.3.3"
   }
