--- a/plugins/replicate-simple-bg-plugin/package.json
+++ b/plugins/replicate-simple-bg-plugin/package.json
@@ -21,29 +21,33 @@
   "dependencies": {
     "@deenruv/admin-types": "workspace:^",
     "@deenruv/common": "workspace:^",
-    "@deenruv/core": "workspace:^",
     "@deenruv/react-ui-devkit": "workspace:^",
+    "@hookform/resolvers": "^3.3.4",
     "@nestjs/common": "^10.3.10",
     "@nestjs/graphql": "^12.2.0",
+    "axios": "^1.7.7",
     "graphql-tag": "^2.12.6",
     "graphql-zeus": "^7.0.0",
     "lucide-react": "^0.363.0",
     "react": "^18.2.0",
     "react-dropzone": "^14.3.8",
+    "react-hook-form": "^7.51.3",
     "react-i18next": "^14.0.5",
     "react-router-dom": "^6.22.1",
     "replicate": "1.0.1",
-    "sonner": "^1.4.41"
+    "sonner": "^1.4.41",
+    "zod": "^3.22.5"
   },
   "peerDependencies": {
+    "@deenruv/core": "^0.0.148",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
+    "@deenruv/core": "workspace:^",
     "@graphql-typed-document-node/core": "3.2.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "rimraf": "^5.0.10",
-    "typeorm": "^0.3.20",
     "typescript": "5.3.3"
   }
 }
