--- a/plugins/seo-plugin/package.json
+++ b/plugins/seo-plugin/package.json
@@ -20,10 +20,13 @@
   },
   "dependencies": {
     "@deenruv/common": "workspace:^",
-    "@deenruv/core": "workspace:^",
     "@deenruv/react-ui-devkit": "workspace:^"
   },
+  "peerDependencies": {
+    "@deenruv/core": "^0.0.148"
+  },
   "devDependencies": {
+    "@deenruv/core": "workspace:^",
     "rimraf": "^5.0.10",
     "typescript": "5.3.3"
   }
