--- a/plugins/stellate-plugin/package.json
+++ b/plugins/stellate-plugin/package.json
@@ -25,9 +25,12 @@
     "node-fetch": "^2.7.0",
     "rxjs": "^7.8.1"
   },
+  "peerDependencies": {
+    "@deenruv/core": "^0.0.148"
+  },
   "devDependencies": {
-    "@deenruv/common": "workspace:^",
     "@deenruv/core": "workspace:^",
+    "@deenruv/common": "workspace:^",
     "@types/node-fetch": "^2.6.11",
     "rimraf": "^5.0.5"
   }
