--- a/packages/admin-ui/package.json
+++ b/packages/admin-ui/package.json
@@ -79,7 +79,6 @@
     "prosemirror-view": "^1.37.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "rxjs": "^7.8.1",
     "sass": "^1.79.4",
     "tslib": "^2.6.2",
     "zone.js": "~0.14.4"
@@ -106,6 +105,10 @@
     "ng-packagr": "17.2.1",
     "puppeteer": "^19.8.3",
     "rimraf": "^5.0.5",
+    "rxjs": "7.8.1",
     "typescript": "5.3.3"
+  },
+  "peerDependencies": {
+    "rxjs": "7.8.1"
   }
 }
