--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -48,7 +48,8 @@
     "graphql-fields": "^2.0.3",
     "graphql-scalars": "^1.22.5",
     "graphql-tag": "^2.12.6",
-    "graphql-upload": "^16.0.2"
+    "graphql-upload": "^16.0.2",
+    "rxjs": "7.8.1"
   },
   "dependencies": {
     "@apollo/server": "^4.10.4",
@@ -83,7 +84,6 @@
     "picocolors": "^1.0.0",
     "progress": "^2.0.3",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1",
     "semver": "^7.6.0"
   },
   "devDependencies": {
@@ -105,6 +105,7 @@
     "mysql": "^2.18.1",
     "pg": "^8.11.3",
     "rimraf": "^5.0.5",
+    "rxjs": "7.8.1",
     "sql.js": "1.10.2",
     "sqlite3": "^5.1.7",
     "ts-node": "^10.9.2",
