--- a/packages/ui-devkit/package.json
+++ b/packages/ui-devkit/package.json
@@ -43,8 +43,7 @@
     "chalk": "^4.1.0",
     "chokidar": "^3.6.0",
     "fs-extra": "^11.2.0",
-    "glob": "^9.2.1",
-    "rxjs": "^7.8.1"
+    "glob": "^9.2.1"
   },
   "devDependencies": {
     "@deenruv/core": "workspace:^",
@@ -56,7 +55,11 @@
     "rimraf": "^5.0.5",
     "rollup": "^4.13.0",
     "rollup-plugin-typescript2": "^0.36.0",
+    "rxjs": "7.8.1",
     "tslib": "^2.6.2",
     "typescript": "5.3.3"
+  },
+  "peerDependencies": {
+    "rxjs": "7.8.1"
   }
 }
