--- a/plugins/elasticsearch-plugin/package.json
+++ b/plugins/elasticsearch-plugin/package.json
@@ -27,18 +27,19 @@
     "@nestjs/graphql": "^12.2.0",
     "@nestjs/terminus": "^10.2.3",
     "deepmerge": "^4.2.2",
-    "fast-deep-equal": "^3.1.3",
-    "rxjs": "^7.8.1"
+    "fast-deep-equal": "^3.1.3"
   },
   "devDependencies": {
     "@deenruv/core": "workspace:^",
     "rimraf": "^5.0.5",
+    "rxjs": "7.8.1",
     "typescript": "5.3.3"
   },
   "peerDependencies": {
     "@deenruv/core": "^0.1.0",
     "@nestjs/core": "^10.3.10",
     "graphql-tag": "^2.12.6",
+    "rxjs": "7.8.1",
     "typeorm": "^0.3.20"
   }
 }
