--- a/plugins/job-queue-plugin/package.json
+++ b/plugins/job-queue-plugin/package.json
@@ -22,7 +22,8 @@
     "access": "public"
   },
   "peerDependencies": {
-    "@deenruv/core": "^0.1.0"
+    "@deenruv/core": "^0.1.0",
+    "rxjs": "7.8.1"
   },
   "devDependencies": {
     "@deenruv/core": "workspace:^",
@@ -31,11 +32,11 @@
     "bullmq": "^5.4.2",
     "ioredis": "^5.3.2",
     "rimraf": "^5.0.5",
+    "rxjs": "7.8.1",
     "typescript": "5.3.3"
   },
   "dependencies": {
     "@nestjs/common": "^10.3.10",
-    "@nestjs/terminus": "^10.2.3",
-    "rxjs": "^7.8.1"
+    "@nestjs/terminus": "^10.2.3"
   }
 }
