--- a/plugins/przelewy24-plugin/tsconfig.json
+++ b/plugins/przelewy24-plugin/tsconfig.json
@@ -1,9 +1,12 @@
 {
-    "compilerOptions": {
-        "composite": true,
-        "declaration": true,
-        "declarationMap": true
-    },
-    "references": [{ "path": "./src/plugin-server" }, { "path": "src/plugin-ui" }],
-    "files": []
+  "compilerOptions": {
+    "composite": true,
+    "declaration": true,
+    "declarationMap": true
+  },
+  "references": [
+    { "path": "./src/plugin-server" },
+    { "path": "./src/plugin-ui" }
+  ],
+  "files": []
 }
