--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "server",
-  "version": "0.1.17",
+  "version": "0.1.18",
   "main": "index.js",
   "license": "MIT",
   "private": true,
@@ -30,6 +30,7 @@
     "@deenruv/in-realization-plugin": "workspace:*",
     "@deenruv/wfirma-plugin": "workspace:*",
     "@deenruv/przelewy24-plugin": "workspace:*",
+    "@deenruv/inpost-plugin": "workspace:*",
     "@deenruv/deenruv-examples-plugin": "workspace:*",
     "@deenruv/seo-plugin": "workspace:*",
     "@deenruv/dashboard-widgets-plugin": "workspace:*",
