--- a/packages/inpost/tsconfig.json
+++ b/packages/inpost/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
-    "target": "es2015",
-    "moduleResolution": "node",
+    "target": "esnext",
+    "moduleResolution": "nodenext",
     "esModuleInterop": true,
-    "module": "ESNext",
+    "module": "nodenext",
     "rootDir": "./src",
     "outDir": "./dist",
     "declaration": true,
