--- a/plugins/przelewy24-plugin/package.json
+++ b/plugins/przelewy24-plugin/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@deenruv/przelewy24-plugin",
-  "version": "0.1.17",
+  "version": "0.1.18",
   "homepage": "https://www.deenruv.com/",
   "license": "MIT",
   "type": "module",
@@ -10,7 +10,9 @@
   "files": [
     "dist/**/*"
   ],
+  "main": "./dist/plugin-server/index.js",
   "exports": {
+    ".": "./dist/plugin-server/index.js",
     "./plugin-server": "./dist/plugin-server/index.js",
     "./plugin-server/ui": "./dist/plugin-server/ui.js",
     "./plugin-ui": "./dist/plugin-ui/index.js"
