one more change

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,20 +1,8 @@
 include:
-    - project: 'ci/templates/node'
-      file: ['pnpm-publish.yml']
+  - project: 'ci/templates/node'
+    file: ['pnpm-publish.yml']
 
-test:
-  variables:
-    POSTGRES_DB: deenruv
-    POSTGRES_USER: deenruv
-    POSTGRES_PASSWORD: deenruv
-    POSTGRES_HOST_AUTH_METHOD: trust
-    PGHOST: deenruv
-    DB_SCHEMA: public
-  services:
-    - name: postgres
-      alias: postgres
-
-.build artifacts: &build_artifacts
+.build_artifacts: &build_artifacts
   artifacts:
     paths:
       - packages/*/lib
@@ -34,6 +22,16 @@ build:
 
 test:
   <<: *build_artifacts
+  variables:
+    POSTGRES_DB: deenruv
+    POSTGRES_USER: deenruv
+    POSTGRES_PASSWORD: deenruv
+    POSTGRES_HOST_AUTH_METHOD: trust
+    PGHOST: deenruv
+    DB_SCHEMA: public
+  services:
+    - name: postgres
+      alias: postgres
 
 lint:
   <<: *build_artifacts
